correct the container alignment for mobile viewing

--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -101,6 +101,7 @@ p {
     .container{
         height:100vh;
         width:100vw;
+        justify-content:start;
     }
     .image-container {
         width: 200px;
